--- a/result/2022-01-06.md
+++ b/result/2022-01-06.md
@@ -9,10 +9,10 @@
 9. [一家三口卧室烤火致一氧化碳中毒](https://s.weibo.com//weibo?q=%23%E4%B8%80%E5%AE%B6%E4%B8%89%E5%8F%A3%E5%8D%A7%E5%AE%A4%E7%83%A4%E7%81%AB%E8%87%B4%E4%B8%80%E6%B0%A7%E5%8C%96%E7%A2%B3%E4%B8%AD%E6%AF%92%23&Refer=top) 565572
 10. [舍不得分享给姐妹的女装店](https://s.weibo.com//weibo?q=%23%E8%88%8D%E4%B8%8D%E5%BE%97%E5%88%86%E4%BA%AB%E7%BB%99%E5%A7%90%E5%A6%B9%E7%9A%84%E5%A5%B3%E8%A3%85%E5%BA%97%23&Refer=top) 459551
 11. [法国发现新冠新变异毒株IHU](https://s.weibo.com//weibo?q=%23%E6%B3%95%E5%9B%BD%E5%8F%91%E7%8E%B0%E6%96%B0%E5%86%A0%E6%96%B0%E5%8F%98%E5%BC%82%E6%AF%92%E6%A0%AAIHU%23&Refer=top) 455145
-12. [新疆100万个小油馕今夜到达西安](https://s.weibo.com//weibo?q=%23%E6%96%B0%E7%96%86100%E4%B8%87%E4%B8%AA%E5%B0%8F%E6%B2%B9%E9%A6%95%E4%BB%8A%E5%A4%9C%E5%88%B0%E8%BE%BE%E8%A5%BF%E5%AE%89%23&Refer=top) 450288
-13. [社恐男生不敢当众演讲全班向后转配合](https://s.weibo.com//weibo?q=%23%E7%A4%BE%E6%81%90%E7%94%B7%E7%94%9F%E4%B8%8D%E6%95%A2%E5%BD%93%E4%BC%97%E6%BC%94%E8%AE%B2%E5%85%A8%E7%8F%AD%E5%90%91%E5%90%8E%E8%BD%AC%E9%85%8D%E5%90%88%23&Refer=top) 428180
-14. [西安要求对孕产妇等开通绿色通道](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E8%A6%81%E6%B1%82%E5%AF%B9%E5%AD%95%E4%BA%A7%E5%A6%87%E7%AD%89%E5%BC%80%E9%80%9A%E7%BB%BF%E8%89%B2%E9%80%9A%E9%81%93%23&Refer=top) 418678
-15. [哈萨克斯坦首都进入紧急状态](https://s.weibo.com//weibo?q=%23%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E9%A6%96%E9%83%BD%E8%BF%9B%E5%85%A5%E7%B4%A7%E6%80%A5%E7%8A%B6%E6%80%81%23&Refer=top) 339851
+12. [新疆100万个小油馕今夜到达西安](https://s.weibo.com//weibo?q=%23%E6%96%B0%E7%96%86100%E4%B8%87%E4%B8%AA%E5%B0%8F%E6%B2%B9%E9%A6%95%E4%BB%8A%E5%A4%9C%E5%88%B0%E8%BE%BE%E8%A5%BF%E5%AE%89%23&Refer=top) 451859
+13. [哈萨克斯坦首都进入紧急状态](https://s.weibo.com//weibo?q=%23%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E9%A6%96%E9%83%BD%E8%BF%9B%E5%85%A5%E7%B4%A7%E6%80%A5%E7%8A%B6%E6%80%81%23&Refer=top) 448720
+14. [社恐男生不敢当众演讲全班向后转配合](https://s.weibo.com//weibo?q=%23%E7%A4%BE%E6%81%90%E7%94%B7%E7%94%9F%E4%B8%8D%E6%95%A2%E5%BD%93%E4%BC%97%E6%BC%94%E8%AE%B2%E5%85%A8%E7%8F%AD%E5%90%91%E5%90%8E%E8%BD%AC%E9%85%8D%E5%90%88%23&Refer=top) 428180
+15. [西安要求对孕产妇等开通绿色通道](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E8%A6%81%E6%B1%82%E5%AF%B9%E5%AD%95%E4%BA%A7%E5%A6%87%E7%AD%89%E5%BC%80%E9%80%9A%E7%BB%BF%E8%89%B2%E9%80%9A%E9%81%93%23&Refer=top) 418678
 16. [明后两天将相继上演神秘天象](https://s.weibo.com//weibo?q=%23%E6%98%8E%E5%90%8E%E4%B8%A4%E5%A4%A9%E5%B0%86%E7%9B%B8%E7%BB%A7%E4%B8%8A%E6%BC%94%E7%A5%9E%E7%A7%98%E5%A4%A9%E8%B1%A1%23&Refer=top) 337836
 17. [市监总局对阿里腾讯哔哩哔哩做出行政处罚](https://s.weibo.com//weibo?q=%23%E5%B8%82%E7%9B%91%E6%80%BB%E5%B1%80%E5%AF%B9%E9%98%BF%E9%87%8C%E8%85%BE%E8%AE%AF%E5%93%94%E5%93%A9%E5%93%94%E5%93%A9%E5%81%9A%E5%87%BA%E8%A1%8C%E6%94%BF%E5%A4%84%E7%BD%9A%23&Refer=top) 330096
 18. [金美秀去世](https://s.weibo.com//weibo?q=%23%E9%87%91%E7%BE%8E%E7%A7%80%E5%8E%BB%E4%B8%96%23&Refer=top) 329598
@@ -21,10 +21,10 @@
 21. [没有小朋友能拒绝这个礼物](https://s.weibo.com//weibo?q=%23%E6%B2%A1%E6%9C%89%E5%B0%8F%E6%9C%8B%E5%8F%8B%E8%83%BD%E6%8B%92%E7%BB%9D%E8%BF%99%E4%B8%AA%E7%A4%BC%E7%89%A9%23&Refer=top) 307266
 22. [郑州新增6例阳性](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E6%96%B0%E5%A2%9E6%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 277311
 23. [2022中国将全面建成空间站](https://s.weibo.com//weibo?q=%232022%E4%B8%AD%E5%9B%BD%E5%B0%86%E5%85%A8%E9%9D%A2%E5%BB%BA%E6%88%90%E7%A9%BA%E9%97%B4%E7%AB%99%23&Refer=top) 271177
-24. [邻居吃榴莲男子以为煤气泄漏报火警](https://s.weibo.com//weibo?q=%23%E9%82%BB%E5%B1%85%E5%90%83%E6%A6%B4%E8%8E%B2%E7%94%B7%E5%AD%90%E4%BB%A5%E4%B8%BA%E7%85%A4%E6%B0%94%E6%B3%84%E6%BC%8F%E6%8A%A5%E7%81%AB%E8%AD%A6%23&Refer=top) 254336
-25. [茶颜悦色回应涨价](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%9B%9E%E5%BA%94%E6%B6%A8%E4%BB%B7%23&Refer=top) 251837
-26. [姥爷唯一没忘的是姥姥](https://s.weibo.com//weibo?q=%23%E5%A7%A5%E7%88%B7%E5%94%AF%E4%B8%80%E6%B2%A1%E5%BF%98%E7%9A%84%E6%98%AF%E5%A7%A5%E5%A7%A5%23&Refer=top) 250613
-27. [周深年度先生](https://s.weibo.com//weibo?q=%23%E5%91%A8%E6%B7%B1%E5%B9%B4%E5%BA%A6%E5%85%88%E7%94%9F%23&Refer=top) 247473
+24. [周深年度先生](https://s.weibo.com//weibo?q=%23%E5%91%A8%E6%B7%B1%E5%B9%B4%E5%BA%A6%E5%85%88%E7%94%9F%23&Refer=top) 267153
+25. [茶颜悦色回应涨价](https://s.weibo.com//weibo?q=%23%E8%8C%B6%E9%A2%9C%E6%82%A6%E8%89%B2%E5%9B%9E%E5%BA%94%E6%B6%A8%E4%BB%B7%23&Refer=top) 256576
+26. [邻居吃榴莲男子以为煤气泄漏报火警](https://s.weibo.com//weibo?q=%23%E9%82%BB%E5%B1%85%E5%90%83%E6%A6%B4%E8%8E%B2%E7%94%B7%E5%AD%90%E4%BB%A5%E4%B8%BA%E7%85%A4%E6%B0%94%E6%B3%84%E6%BC%8F%E6%8A%A5%E7%81%AB%E8%AD%A6%23&Refer=top) 254336
+27. [姥爷唯一没忘的是姥姥](https://s.weibo.com//weibo?q=%23%E5%A7%A5%E7%88%B7%E5%94%AF%E4%B8%80%E6%B2%A1%E5%BF%98%E7%9A%84%E6%98%AF%E5%A7%A5%E5%A7%A5%23&Refer=top) 250613
 28. [浙江永康通报一例阳性](https://s.weibo.com//weibo?q=%23%E6%B5%99%E6%B1%9F%E6%B0%B8%E5%BA%B7%E9%80%9A%E6%8A%A5%E4%B8%80%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 242388
 29. [当路上多了一个跳房子时](https://s.weibo.com//weibo?q=%23%E5%BD%93%E8%B7%AF%E4%B8%8A%E5%A4%9A%E4%BA%86%E4%B8%80%E4%B8%AA%E8%B7%B3%E6%88%BF%E5%AD%90%E6%97%B6%23&Refer=top) 237515
 30. [西安全市正在集中隔离42000余人](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%85%A8%E5%B8%82%E6%AD%A3%E5%9C%A8%E9%9B%86%E4%B8%AD%E9%9A%94%E7%A6%BB42000%E4%BD%99%E4%BA%BA%23&Refer=top) 224651
@@ -40,3 +40,4 @@
 40. [郑州本轮疫情主要由德尔塔毒株引起](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E6%9C%AC%E8%BD%AE%E7%96%AB%E6%83%85%E4%B8%BB%E8%A6%81%E7%94%B1%E5%BE%B7%E5%B0%94%E5%A1%94%E6%AF%92%E6%A0%AA%E5%BC%95%E8%B5%B7%23&Refer=top) 141997
 41. [千万不要在饿的时候看小说](https://s.weibo.com//weibo?q=%23%E5%8D%83%E4%B8%87%E4%B8%8D%E8%A6%81%E5%9C%A8%E9%A5%BF%E7%9A%84%E6%97%B6%E5%80%99%E7%9C%8B%E5%B0%8F%E8%AF%B4%23&Refer=top) 132638
 42. [2021女排超级联赛决赛](https://s.weibo.com//weibo?q=%232021%E5%A5%B3%E6%8E%92%E8%B6%85%E7%BA%A7%E8%81%94%E8%B5%9B%E5%86%B3%E8%B5%9B%23&Refer=top) 120872
+43. [郑州累计7例确诊10例无症状](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E7%B4%AF%E8%AE%A17%E4%BE%8B%E7%A1%AE%E8%AF%8A10%E4%BE%8B%E6%97%A0%E7%97%87%E7%8A%B6%23&Refer=top) 99738
