--- a/result/2022-01-06.md
+++ b/result/2022-01-06.md
@@ -43,3 +43,4 @@
 43. [2021女排超级联赛决赛](https://s.weibo.com//weibo?q=%232021%E5%A5%B3%E6%8E%92%E8%B6%85%E7%BA%A7%E8%81%94%E8%B5%9B%E5%86%B3%E8%B5%9B%23&Refer=top) 120872
 44. [iQOO9](https://s.weibo.com//weibo?q=%23iQOO9%23&Refer=top) 85874
 45. [张雨绮说女人不用生得好看要干得漂亮](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E9%9B%A8%E7%BB%AE%E8%AF%B4%E5%A5%B3%E4%BA%BA%E4%B8%8D%E7%94%A8%E7%94%9F%E5%BE%97%E5%A5%BD%E7%9C%8B%E8%A6%81%E5%B9%B2%E5%BE%97%E6%BC%82%E4%BA%AE%23&Refer=top) 48516
+46. [演唱会最让人惊艳的瞬间](https://s.weibo.com//weibo?q=%23%E6%BC%94%E5%94%B1%E4%BC%9A%E6%9C%80%E8%AE%A9%E4%BA%BA%E6%83%8A%E8%89%B3%E7%9A%84%E7%9E%AC%E9%97%B4%23&Refer=top) 46695
